# YourOwnAgent

./: README.md  pyproject.toml
.streamlit/: config.toml
GUI/: Homepage.py  Launcher.py
GUI/pages/: Agent.py  Agents.py  Homepage.py  Ollama_Tutorial.py  YourAgent.py
GUI/subpages/: Agents.py  Homepage.py  Schedule.py  Tutorial.py  YourAgent.py  YourTasks.py
Utils/: LLM.py  Tojson.py
YourAgents/: data_schedule.json  data_tasks.json  moreconfig.json  yourkeys.json
