[tool.poetry]
name = "YourOwnAgent"
version = "0.1.0"
description = ""
authors = ["JordyBacherot <jordy.bacherot@outlook.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"
langchain-groq = "^0.1.9"
langchain-openai = "^0.1.23"
langchain-core = "^0.2.38"
langchain-ollama = "^0.1.3"
ollama = "^0.3.3"
streamlit-extras = "^0.4.7"
poetry-plugin-export = "^1.8.0"
streamlit-calendar = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
